feat: add article detail section

--- a/Pioneer_Development/resources/css/app.css
+++ b/Pioneer_Development/resources/css/app.css
@@ -157,3 +157,6 @@
         @apply bg-background text-foreground;
     }
 }
+
+.stroke-default { -webkit-text-stroke-color: #B0D3C2; }
+.group:hover .stroke-hover { -webkit-text-stroke-color: #FFD600; }
