--- a/Pioneer_Development/resources/css/app.css
+++ b/Pioneer_Development/resources/css/app.css
@@ -167,3 +167,8 @@
 * {
   font-family: 'Poppins', sans-serif !important;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+
+.stroke-default { -webkit-text-stroke-color: #B0D3C2; }
+.group:hover .stroke-hover { -webkit-text-stroke-color: #FFD600; }
