--- a/Pioneer_Development/resources/css/app.css
+++ b/Pioneer_Development/resources/css/app.css
@@ -167,3 +167,6 @@
 * {
   font-family: 'Poppins', sans-serif !important;
 }
+
+.stroke-default { -webkit-text-stroke-color: #B0D3C2; }
+.group:hover .stroke-hover { -webkit-text-stroke-color: #FFD600; }
